--- a/build
+++ b/build
@@ -43,7 +43,12 @@ function cpdir(src, dest) {
 			var symlink = fs.readlinkSync(path.join(src, file));
 			fs.symlinkSync(symlink, path.join(dest, file));
 		} else if (file.endsWith('.js')) {
-			const contents = fs.readFileSync(path.join(src, file), 'utf8').replace(/^exports.* = void 0;$/gm, '');
+			let contents = fs.readFileSync(path.join(src, file), 'utf8');
+			// Remove CommonJS exports
+			contents = contents.replace(/^exports\..*$/gm, '');
+			contents = contents.replace(/^Object\.defineProperty\(exports.*$/gm, '');
+			// Wrap in IIFE to avoid global variable conflicts
+			contents = `(function() {\n${contents}\n})();`;
 			fs.writeFileSync(path.join(dest, file), contents);
 		} else {
 			fs.copyFileSync(path.join(src, file),path.join(dest, file));
