--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,12 +8,13 @@
     "incremental": true,
     "lib": ["es2016", "dom"],
     "module": "commonjs",
+    "moduleResolution": "node",
     "noEmitOnError": true,
     "noFallthroughCasesInSwitch": true,
     "noImplicitReturns": true,
     "sourceMap": true,
     "strict": true,
-    "target": "es3",
+    "target": "es5",
     "removeComments": true,
   }
 }
